// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index Alsos should render multiple correctly 1`] = `
.emotion-0 {
  position: relative;
  z-index: 2;
  padding: 1rem 0 0;
}

.emotion-2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-4 {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.emotion-6 {
  border-top: 1px solid #F2F2F2;
  padding: 0.5rem 0;
}

.emotion-8 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-8:hover,
.emotion-8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-8:visited {
  color: #6E6E73;
}

.emotion-8 svg {
  margin: 0;
}

.emotion-10 {
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  display: inline-block;
  vertical-align: middle;
  padding-right: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-10 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-14 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-e2e="index-alsos"
  >
    <h4
      class="emotion-2 emotion-3"
    >
      Related content
    </h4>
    <ul
      class="emotion-4 emotion-5"
      role="list"
    >
      <li
        class="emotion-6 emotion-7"
        role="listitem"
      >
        <a
          aria-labelledby="IndexAlsosLink-hausalabarai48916590"
          class="emotion-8 emotion-9"
          href="/hausa/labarai-48916590"
        >
          <div
            aria-hidden="true"
            class="emotion-10 emotion-11"
            data-e2e="media-indicator"
            dir="ltr"
          >
            <div
              class="emotion-12 emotion-13"
            >
              <svg
                aria-hidden="true"
                class="emotion-14 emotion-15"
                focusable="false"
                height="12px"
                viewBox="0 0 32 32"
                width="12px"
              >
                <polygon
                  points="3,32 29,16 3,0"
                />
              </svg>
            </div>
          </div>
          <span
            id="IndexAlsosLink-hausalabarai48916590"
            role="text"
          >
            <span
              class="emotion-2 emotion-3"
            >
              video, 
            </span>
            <span>
              APC ba ta isa ta kore ni ba – Buba Galadima
            </span>
          </span>
        </a>
      </li>
      <li
        class="emotion-6 emotion-7"
        role="listitem"
      >
        <a
          class="emotion-8 emotion-9"
          href="/hausa/labarai-42837051"
        >
          <span>
            Yaushe Obasanjo ya fara yi wa shugabannin kasa baki?
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Index Alsos should render one correctly 1`] = `
.emotion-0 {
  position: relative;
  z-index: 2;
  padding: 1rem 0 0;
}

.emotion-2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-4 {
  border-top: 1px solid #F2F2F2;
  padding: 0.5rem 0;
}

.emotion-6 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-6 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited {
  color: #6E6E73;
}

.emotion-6 svg {
  margin: 0;
}

.emotion-8 {
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  display: inline-block;
  vertical-align: middle;
  padding-right: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-12 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-e2e="index-alsos"
  >
    <h4
      class="emotion-2 emotion-3"
    >
      Related content
    </h4>
    <div
      class="emotion-4 emotion-5"
    >
      <a
        aria-labelledby="IndexAlsosLink-hausalabarai48916590"
        class="emotion-6 emotion-7"
        href="/hausa/labarai-48916590"
      >
        <div
          aria-hidden="true"
          class="emotion-8 emotion-9"
          data-e2e="media-indicator"
          dir="ltr"
        >
          <div
            class="emotion-10 emotion-11"
          >
            <svg
              aria-hidden="true"
              class="emotion-12 emotion-13"
              focusable="false"
              height="12px"
              viewBox="0 0 32 32"
              width="12px"
            >
              <polygon
                points="3,32 29,16 3,0"
              />
            </svg>
          </div>
        </div>
        <span
          id="IndexAlsosLink-hausalabarai48916590"
          role="text"
        >
          <span
            class="emotion-2 emotion-3"
          >
            video, 
          </span>
          <span>
            APC ba ta isa ta kore ni ba – Buba Galadima
          </span>
        </span>
      </a>
    </div>
  </div>
</div>
`;
